// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductOverviewPane component renders correctly 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-1"
  >
    <svg
      class="ProductOverviewPane-brandLogo-2"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-3 Typography-root-14 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-4"
    >
      <li>
        <span
          class="ProductOverviewPane-term-7"
        >
          label
        </span>
        <span
          class="ProductOverviewPane-definition-8"
        >
          1394983720195
        </span>
      </li>
      <li>
        <span
          class="ProductOverviewPane-term-7"
        >
          Colour
        </span>
        <span
          class="ProductOverviewPane-definition-8"
        >
          Brown
        </span>
        <div
          class="ProductOverviewPane-variants-5"
        >
          <div
            class="ProductOverviewPane-variant-6"
          >
            <div
              class="ToggleCard-root-22"
            >
              <button
                class="MuiButtonBase-root Thumbnail-root-23"
                data-testid="default-thumbnail"
                style="background-color: rgb(255, 255, 255); background-image: url(path-to-image);"
                tabindex="0"
                type="button"
              >
                <span
                  class="Thumbnail-accessibilityText-27"
                >
                  Black
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-6"
          >
            <div
              class="ToggleCard-root-22"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root Thumbnail-root-23 Thumbnail-selected-25 Thumbnail-selected-25"
                data-testid="default-thumbnail"
                href="#"
                style="background-color: rgb(255, 255, 255); background-image: url(path-to-image);"
                tabindex="0"
              >
                <span
                  class="Thumbnail-accessibilityText-27"
                >
                  Brown
                </span>
              </a>
            </div>
          </div>
        </div>
      </li>
      <li>
        <span
          class="ProductOverviewPane-term-7"
        >
          Size
        </span>
        <div
          class="ProductOverviewPane-variants-5 ProductOverviewPane-spaced-13"
        >
          <div
            class="ProductOverviewPane-variant-6"
          >
            <div
              class="ToggleCard-root-22"
            >
              <div
                class="MuiChip-root Chip-root-30 MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  22cm x 42cm
                </span>
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-6"
          >
            <div
              class="ToggleCard-root-22"
            >
              <div
                class="MuiChip-root Chip-root-30 Chip-default-31"
                href="#"
              >
                <span
                  class="MuiChip-label"
                >
                  12cm x 22cm
                </span>
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-6"
          >
            <div
              class="ToggleCard-root-22"
            >
              <div
                aria-disabled="true"
                class="MuiChip-root Chip-root-30 Chip-default-31 Mui-disabled"
              >
                <span
                  class="MuiChip-label"
                >
                  30cm x 62cm
                </span>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly if attribute type === chips 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-108"
  >
    <svg
      class="ProductOverviewPane-brandLogo-109"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-110 Typography-root-121 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-111"
    >
      <li>
        <span
          class="ProductOverviewPane-term-114"
        >
          label
        </span>
        <span
          class="ProductOverviewPane-definition-115"
        >
          1394983720195
        </span>
      </li>
      <li>
        <span
          class="ProductOverviewPane-term-114"
        >
          Size
        </span>
        <div
          class="ProductOverviewPane-variants-112 ProductOverviewPane-spaced-120"
        >
          <div
            class="ProductOverviewPane-variant-113"
          >
            <div
              class="ToggleCard-root-129"
            >
              <div
                class="MuiChip-root Chip-root-130 MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  22cm x 42cm
                </span>
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-113"
          >
            <div
              class="ToggleCard-root-129"
            >
              <div
                aria-disabled="true"
                class="MuiChip-root Chip-root-130 Chip-default-131 Mui-disabled"
              >
                <span
                  class="MuiChip-label"
                >
                  12cm x 22cm
                </span>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly if attributesis empty array 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-133"
  >
    <svg
      class="ProductOverviewPane-brandLogo-134"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-135 Typography-root-146 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-136"
    />
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly if nobb === null 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-86"
  >
    <svg
      class="ProductOverviewPane-brandLogo-87"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-88 Typography-root-99 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-89"
    >
      <li>
        <span
          class="ProductOverviewPane-term-92"
        >
          Size
        </span>
        <span
          class="ProductOverviewPane-definition-93"
        >
          22cm x 42cm
        </span>
        <div
          class="ProductOverviewPane-variants-90"
        >
          <div
            class="ProductOverviewPane-variant-91"
          >
            <div
              class="ToggleCard-root-107"
            >
              <div>
                thumbnail
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-91"
          >
            <div
              class="ToggleCard-root-107"
            >
              <div>
                thumbnail
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly if some variant has isSelected equals false 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-154"
  >
    <svg
      class="ProductOverviewPane-brandLogo-155"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-156 Typography-root-167 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-157"
    />
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly with children 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-33"
  >
    <svg
      class="ProductOverviewPane-brandLogo-34"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-35 Typography-root-46 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-36"
    >
      <li>
        <span
          class="ProductOverviewPane-term-39"
        >
          label
        </span>
        <span
          class="ProductOverviewPane-definition-40"
        >
          1394983720195
        </span>
      </li>
      <li>
        <span
          class="ProductOverviewPane-term-39"
        >
          Colour
        </span>
        <span
          class="ProductOverviewPane-definition-40"
        >
          Brown
        </span>
        <div
          class="ProductOverviewPane-variants-37"
        >
          <div
            class="ProductOverviewPane-variant-38"
          >
            <div
              class="ToggleCard-root-54"
            >
              <button
                class="MuiButtonBase-root Thumbnail-root-55"
                data-testid="default-thumbnail"
                style="background-color: rgb(255, 255, 255); background-image: url(path-to-image);"
                tabindex="0"
                type="button"
              >
                <span
                  class="Thumbnail-accessibilityText-59"
                >
                  Black
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-38"
          >
            <div
              class="ToggleCard-root-54"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root Thumbnail-root-55 Thumbnail-selected-57 Thumbnail-selected-57"
                data-testid="default-thumbnail"
                href="#"
                style="background-color: rgb(255, 255, 255); background-image: url(path-to-image);"
                tabindex="0"
              >
                <span
                  class="Thumbnail-accessibilityText-59"
                >
                  Brown
                </span>
              </a>
            </div>
          </div>
        </div>
      </li>
      <li>
        <span
          class="ProductOverviewPane-term-39"
        >
          Size
        </span>
        <div
          class="ProductOverviewPane-variants-37 ProductOverviewPane-spaced-45"
        >
          <div
            class="ProductOverviewPane-variant-38"
          >
            <div
              class="ToggleCard-root-54"
            >
              <div
                class="MuiChip-root Chip-root-62 MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  22cm x 42cm
                </span>
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-38"
          >
            <div
              class="ToggleCard-root-54"
            >
              <div
                class="MuiChip-root Chip-root-62 Chip-default-63"
                href="#"
              >
                <span
                  class="MuiChip-label"
                >
                  12cm x 22cm
                </span>
              </div>
            </div>
          </div>
          <div
            class="ProductOverviewPane-variant-38"
          >
            <div
              class="ToggleCard-root-54"
            >
              <div
                aria-disabled="true"
                class="MuiChip-root Chip-root-62 Chip-default-63 Mui-disabled"
              >
                <span
                  class="MuiChip-label"
                >
                  30cm x 62cm
                </span>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div>
      Some container
    </div>
    <p>
      some text
    </p>
  </div>
</div>
`;

exports[`ProductOverviewPane component renders correctly with empty variants 1`] = `
<div>
  <div
    class="ProductOverviewPane-root-65"
  >
    <svg
      class="ProductOverviewPane-brandLogo-66"
    />
    <h1
      class="MuiTypography-root ProductOverviewPane-heading-67 Typography-root-78 MuiTypography-h3"
      data-testid="typography"
    >
      Type S Roof Shingles
    </h1>
    <ul
      class="ProductOverviewPane-attributes-68"
    >
      <li>
        <span
          class="ProductOverviewPane-term-71"
        >
          label
        </span>
        <span
          class="ProductOverviewPane-definition-72"
        >
          1394983720195
        </span>
      </li>
    </ul>
  </div>
</div>
`;
